Не показывается кнопка входа, надо фиксить

--- a/web/index.html
+++ b/web/index.html
@@ -10,13 +10,14 @@
 <body>
     <header>
         <div class="logo-container">
-            <a href="#"><img src="/web/Images/shoeger.png" alt="logo"></a>
+            <a href="#"><img src="Images/shoeger.png" alt="logo"></a>
         </div>
         <ul>
-            <li><a href="">Купить модель</a></li>
-            <li><a href="">Редактировать</a></li>
-            <li><a href="">Добавить</a></li>
-            <li><a href="">Посмотреть</a></li>
+            <li><a id="buy-model" href="">Купить модель</a></li>
+            <li><a id="create-model" href="">Добавить модель</a></li>
+            <li><a id="create-user" href="">Добавить пользователя</a></li>
+            <li><a id="edit-model" href="">Изменить модель</a></li>
+            <li><a id="edit-user" href="">Изменить пользователя</a></li>
         </ul>
         <ul class="log-bar">
             <li>
@@ -26,9 +27,10 @@
                 <a href="#" id="logout">Выйти</a>
             </li>
         </ul>  
+        <p id="info" class="text-info">&nbsp;</p>
     </header>
 
-    <main>
+    <main id="content">
 
     </main>
 
