Пофиксил кнопку входа, сделал форму входа, исправил создание юзера. Но кнопка подтверждения возвращает 0.

--- a/web/index.html
+++ b/web/index.html
@@ -30,11 +30,9 @@
         <p id="info" class="text-info">&nbsp;</p>
     </header>
 
-    <main id="content">
-
-    </main>
+    <main id="content"></main>
 
     <footer>Dzjubenko 2022</footer>
-    <script src="js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
 </body>
 </html>
