Наконец-то пофиксил обещание, теперь прога получает объект юзера, работаем.

--- a/web/index.html
+++ b/web/index.html
@@ -21,17 +21,15 @@
         </ul>
         <ul class="log-bar">
             <li>
-                <a href="#" id="login">Войти</a>
+                <a href="#" id="logIn">Войти</a>
             </li>
             <li>
-                <a href="#" id="logout">Выйти</a>
+                <a href="#" id="logOut">Выйти</a>
             </li>
         </ul>  
         <p id="info" class="text-info">&nbsp;</p>
     </header>
-
     <main id="content"></main>
-
     <footer>Dzjubenko 2022</footer>
     <script type="module" src="js/index.js"></script>
 </body>
