Доделал вход-выход до конца, навел красоту на форме. Начинаем делать регистрацию.

--- a/web/index.html
+++ b/web/index.html
@@ -13,11 +13,11 @@
             <a href="#"><img src="Images/shoeger.png" alt="logo"></a>
         </div>
         <ul>
-            <li><a id="buy-model" href="">Купить модель</a></li>
-            <li><a id="create-model" href="">Добавить модель</a></li>
-            <li><a id="create-user" href="">Добавить пользователя</a></li>
-            <li><a id="edit-model" href="">Изменить модель</a></li>
-            <li><a id="edit-user" href="">Изменить пользователя</a></li>
+            <li id="buy-model"><a href="#">Купить модель</a></li>
+            <li id="create-model"><a href="#">Добавить модель</a></li>
+            <li id="create-user"><a href="#">Добавить пользователя</a></li>
+            <li id="edit-model"><a href="#">Изменить модель</a></li>
+            <li id="edit-user"><a href="#">Изменить пользователя</a></li>
         </ul>
         <ul class="log-bar">
             <li>
@@ -27,8 +27,8 @@
                 <a href="#" id="logOut">Выйти</a>
             </li>
         </ul>  
-        <p id="info" class="text-info">&nbsp;</p>
     </header>
+    <p id="info" class="text-info">&nbsp;</p>
     <main id="content"></main>
     <footer>Dzjubenko 2022</footer>
     <script type="module" src="js/index.js"></script>
