--- a/web/test.html
+++ b/web/test.html
@@ -37,9 +37,13 @@
     <main id="content">
         <div class="shoe-container">
             <div class="top-content">
-                <span class="container-title">Добавление обуви</span>
+                <span class="model-edit-title">Изменение обуви</span>
             </div>
             <div class="mid-content">
+                <label for="list models">Список моделей:</label>
+                <select name="list models" id="list-models">
+
+                </select>
                 <div class="wrap-input100 validate-input" data-validate="Enter name">
                     <input class="input100" type="text" id="model-name" name="modelName" placeholder="Model name">
                 </div>
@@ -56,7 +60,7 @@
                     <input class="input100" type="number" id="model-amount" min="1" max="50" name="amount" placeholder="Amount">
                 </div>
                 <div class="container-login100-form-btn">
-                    <button class="login100-form-btn">Добавить</button>
+                    <button class="login100-form-btn" id="edit-model">Изменить</button>
                 </div>
             </div>
         </div>
