Разобрался с покупкой, ten years of pracrtise. Делаю прибыль.

--- a/web/index.html
+++ b/web/index.html
@@ -13,11 +13,22 @@
             <a href="#"><img src="Images/shoeger.png" alt="logo"></a>
         </div>
         <ul>
+            <li id="admin-panel"><a href="#">Панель админа</a></li>
             <li id="buy-model"><a href="#">Купить модель</a></li>
-            <li id="create-model"><a href="#">Добавить модель</a></li>
-            <li id="create-user"><a href="#">Добавить пользователя</a></li>
-            <li id="edit-model"><a href="#">Изменить модель</a></li>
-            <li id="edit-user"><a href="#">Изменить пользователя</a></li>
+            <li id="create-model"><a href="#">Добавить модель</a>
+            <li id="edit-model"><a href="#">Изменить модель</a>
+            <li id="create-user"><a href="#">Добавить пользователя</a>
+            <li id="edit-user"><a href="#">Изменить пользователя</a>
+            <!-- <div id="dropdown-model" class="dropdown">
+                <button class="dropbtn">Модель</button>
+                <div class="dropdown-content">
+                </div>
+            </div>
+            <div id="dropdown-user" class="dropdown">
+                <button class="dropbtn">Пользователь</button>
+                <div class="dropdown-content">
+                </div>
+            </div> -->
         </ul>
         <ul class="log-bar">
             <li>
