Сделал прибыль за всё время.

--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@
         <ul>
             <li id="admin-panel"><a href="#">Панель админа</a></li>
             <li id="buy-model"><a href="#">Купить модель</a></li>
+            <li id="gain-panel"><a href="#">Прибыль</a></li>
             <li id="create-model"><a href="#">Добавить модель</a>
             <li id="edit-model"><a href="#">Изменить модель</a>
             <li id="create-user"><a href="#">Добавить пользователя</a>
