Почти доделал изменение себя.

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,7 @@
             <li id="edit-model"><a href="#">Изменить модель</a>
             <li id="create-user"><a href="#">Добавить пользователя</a>
             <li id="edit-user"><a href="#">Изменить пользователя</a>
+            <li id="edit-myself"><a href="#">Изменить себя</a>
             <!-- <div id="dropdown-model" class="dropdown">
                 <button class="dropbtn">Модель</button>
                 <div class="dropdown-content">
