--- a/web/test.html
+++ b/web/test.html
@@ -19,59 +19,89 @@
         </div>
         <ul>
             <li id="admin-panel"><a href="#">Панель админа</a></li>
+            <div id="model-panel" onclick="myDrop1()" class="dropdown">
+                <button class="dropbtn">Модели</button>
+                <div id="myDropdown1" class="dropdown-content">
+                    <a id="create-model" href="#">Добавить</a>
+                    <a id="edit-model" href="#">Изменить</a>
+                </div>
+            </div>
+            <div id="user-panel" onclick="myDrop2()" class="dropdown">
+                <button class="dropbtn">Пользователи</button>
+                <div id="myDropdown2" class="dropdown-content">
+                    <a id="create-user" href="#">Добавить</a>
+                    <a id="edit-user" href="#">Изменить</a>
+                </div>
+            </div>
             <li id="buy-model"><a href="#">Купить модель</a></li>
-            <div id="dropdown-model" class="dropdown">
-                <button class="dropbtn">Модель</button>
-                <div class="dropdown-content">
-                    <a id="create-model" href="#">Добавить модель</a>
-                    <a id="edit-model" href="#">Изменить модель</a>
-                </div>
-            </div>
-            <div id="dropdown-user" class="dropdown">
-                <button class="dropbtn">Пользователь</button>
-                <div class="dropdown-content">
-                    <a id="create-user" href="#">Добавить пользователя</a>
-                    <a id="edit-user" href="#">Изменить пользователя</a>
-                </div>
-            </div>
+            <li id="gain-panel"><a href="#">Прибыль</a></li>
+            <li id="edit-myself"><a href="#">Изменить себя</a>
+        </ul>
+        <ul class="log-bar">
+            <li>
+                <a href="#" id="logIn">Войти</a>
+            </li>
+            <li>
+                <a href="#" id="logOut">Выйти</a>
+            </li>
         </ul>  
     </header>
     <p id="info" class="text-info">&nbsp;</p>
     <main id="content">
-        <div class="gain-container">
-            <button id="allGainBtn">
-                Показать заработок за всё время
-            </button>
-            <div id="collapseExample">
-                <p id="allGainTxt">&nbsp;</p>
+        <div class="user-edit-container">
+            <div class="top-content">
+                <span class="user-edit-title">Изменение пользователя</span>
             </div>
-            <h3>Прибыль магазина за определенный месяц</h3>
-            <p id="gainForAMonth">
-                &nbsp;
-            </p>
-            <div class="allGainContainers" style="font-size: 18px; font-family: Molot">
-                <div id="firstColumn" style="width: 35em; text-align: center">
-                    <div id="gainForSeptember" class="month list-group-item list-group-item-warning">Сентябрь</div>
-                    <div id="gainForOctober" class="month list-group-item list-group-item-warning">Октябрь</div>
-                    <div id="gainForNovember" class="month list-group-item list-group-item-warning">Ноябрь</div>
-
-                    <div id="gainForMarch" class="month list-group-item list-group-item-info">Март</div>
-                    <div id="gainForApril" class="month list-group-item list-group-item-info">Апрель</div>
-                    <div id="gainForMay" class="month list-group-item list-group-item-info">Май</div>
+            <div class="mid-content">
+                <label for="list users">Список пользователей:</label>
+                <select name="list users" id="list-users">
+                    <option>-Vibrat dermo-</option>
+                    <option>-Vibrat dermo-</option>
+                </select>
+                <div class="wrap-input100 validate-input" data-validate="Enter first name">
+                    <input class="input100" type="text" id="user-first-name" name="user-firstNamer" placeholder="First name">
                 </div>
-                <div id="secondColumn" style="width: 35em; text-align: center">
-                    <div id="gainForDecember" class="month list-group-item list-group-item-primary">Декабрь</div>
-                    <div id="gainForJanuary" class="month list-group-item list-group-item-primary">Январь</div>
-                    <div id="gainForFebruary" class="month list-group-item list-group-item-primary">Февраль</div>
-
-                    <div id="gainForJune" class="month list-group-item list-group-item-danger">Июнь</div>
-                    <div id="gainForJuly" class="month list-group-item list-group-item-danger">Июль</div>
-                    <div id="gainForAugust" class="month list-group-item list-group-item-danger">Август</div>
-                </div>   
+                <div class="wrap-input100 validate-input" data-validate="Enter last name">
+                    <input class="input100" type="text" id="user-last-name" name="user-lastName" placeholder="Last name">
+                </div>
+                <div class="wrap-input100 validate-input" data-validate="Enter phone">
+                    <input class="input100" type="number" pattern=".{8,}" maxlength="2" id="user-phone" name="phone" placeholder="Phone">
+                </div>
+                <div class="wrap-input100 validate-input" data-validate="Enter money">
+                    <input class="input100" type="number" id="user-money" name="money" placeholder="Money">
+                </div>
+                <div class="wrap-input100 validate-input" data-validate="Enter username">
+                    <input class="input100" type="text" id="user-username" name="username" placeholder="Username">
+                </div>
+                <div class="container-login100-form-btn">
+                    <button class="login100-form-btn" type="submit" id="submit-edit-user">Изменить</button>
+                </div>
             </div>
         </div>
     </main>
     <footer>Dzjubenko 2022</footer>
-    <script type="module" src="js/index.js"></script>
+    <!-- <script type="module" src="js/index.js"></script> -->
+    <script name="dropdown">
+        function myDrop1() {
+            document.getElementById("myDropdown1").classList.add('show');
+            document.getElementById("myDropdown2").classList.remove('show');
+        }
+        function myDrop2() {
+            document.getElementById("myDropdown2").classList.add('show');
+            document.getElementById("myDropdown1").classList.remove('show');
+        }
+        window.onclick = function(event) {
+            if (!event.target.matches('.dropbtn')) {
+                var dropdowns = document.getElementsByClassName("dropdown-content");
+                var i;
+                for (i = 0; i < dropdowns.length; i++) {
+                    var openDropdown = dropdowns[i];
+                    if (openDropdown.classList.contains('show')) {
+                        openDropdown.classList.remove('show');
+                    }
+                }
+            }
+        }
+    </script>
 </body>
 </html>
