Написал небольшой дизайн для страницы прибыли.

--- a/web/test.html
+++ b/web/test.html
@@ -38,7 +38,7 @@
     </header>
     <p id="info" class="text-info">&nbsp;</p>
     <main id="content">
-        <div class="gain-container">
+        <div id="gainCont" class="gain-container">
             <button id="allGainBtn">
                 Показать заработок за всё время
             </button>
@@ -51,22 +51,22 @@
             </p>
             <div class="allGainContainers" style="font-size: 18px; font-family: Molot">
                 <div id="firstColumn" style="width: 35em; text-align: center">
-                    <div id="gainForSeptember" class="month list-group-item list-group-item-warning">Сентябрь</div>
-                    <div id="gainForOctober" class="month list-group-item list-group-item-warning">Октябрь</div>
-                    <div id="gainForNovember" class="month list-group-item list-group-item-warning">Ноябрь</div>
+                    <div id="gainForSeptember" class="month list-group-item list-group-item-action list-group-item-warning">Сентябрь</div>
+                    <div id="gainForOctober" class="month list-group-item list-group-item-action list-group-item-warning">Октябрь</div>
+                    <div id="gainForNovember" class="month list-group-item list-group-item-action list-group-item-warning">Ноябрь</div>
 
-                    <div id="gainForMarch" class="month list-group-item list-group-item-info">Март</div>
-                    <div id="gainForApril" class="month list-group-item list-group-item-info">Апрель</div>
-                    <div id="gainForMay" class="month list-group-item list-group-item-info">Май</div>
+                    <div id="gainForMarch" class="month list-group-item list-group-item-action list-group-item-info">Март</div>
+                    <div id="gainForApril" class="month list-group-item list-group-item-action list-group-item-info">Апрель</div>
+                    <div id="gainForMay" class="month list-group-item list-group-item-action list-group-item-info">Май</div>
                 </div>
                 <div id="secondColumn" style="width: 35em; text-align: center">
-                    <div id="gainForDecember" class="month list-group-item list-group-item-primary">Декабрь</div>
-                    <div id="gainForJanuary" class="month list-group-item list-group-item-primary">Январь</div>
-                    <div id="gainForFebruary" class="month list-group-item list-group-item-primary">Февраль</div>
+                    <div id="gainForDecember" class="month list-group-item list-group-item-action list-group-item-primary">Декабрь</div>
+                    <div id="gainForJanuary" class="month list-group-item list-group-item-action list-group-item-primary">Январь</div>
+                    <div id="gainForFebruary" class="month list-group-item list-group-item-action list-group-item-primary">Февраль</div>
 
-                    <div id="gainForJune" class="month list-group-item list-group-item-danger">Июнь</div>
-                    <div id="gainForJuly" class="month list-group-item list-group-item-danger">Июль</div>
-                    <div id="gainForAugust" class="month list-group-item list-group-item-danger">Август</div>
+                    <div id="gainForJune" class="month list-group-item list-group-item-action list-group-item-danger">Июнь</div>
+                    <div id="gainForJuly" class="month list-group-item list-group-item-action list-group-item-danger">Июль</div>
+                    <div id="gainForAugust" class="month list-group-item list-group-item-action list-group-item-danger">Август</div>
                 </div>   
             </div>
         </div>
