--- a/web/test.html
+++ b/web/test.html
@@ -67,7 +67,7 @@
         let input = document.getElementById("inputTag");
         let imageName = document.getElementById("imageName")
 
-        input.addEventListener("change", ()=>{
+        input.addEventListener("change", (e) =>{
             let inputImage = document.querySelector("input[type=file]").files[0];
             imageName.value = inputImage.name;
         })
